@@ -99,6 +99,7 @@ int usb_lld_tx_data_len (int ep_num);
 void usb_lld_txcpy (const void *src, int ep_num, int offset, size_t len);
 void usb_lld_tx_enable (int ep_num, size_t len);
 void usb_lld_write (uint8_t ep_num, const void *buf, size_t len);
+int usb_lld_answer_control (const void *buf, size_t buflen);
 void usb_lld_rx_enable (int ep_num);
 int usb_lld_rx_data_len (int ep_num);
 void usb_lld_rxcpy (uint8_t *dst, int ep_num, int offset, size_t len);
@@ -109,12 +110,7 @@ void usb_lld_setup_endpoint (int ep_num, int ep_type, int ep_kind,
 void usb_lld_set_configuration (uint8_t config);
 uint8_t usb_lld_current_configuration (void);
 void usb_lld_set_feature (uint8_t feature);
-void usb_lld_set_data_to_send (const void *p, size_t len);
-
-extern inline void usb_lld_set_data_to_recv (void *p, size_t len)
-{
-  usb_lld_set_data_to_send ((const void *)p, len);
-}
+void usb_lld_set_data_to_recv (const void *p, size_t len);
 
 void usb_lld_prepare_shutdown (void);
 void usb_lld_shutdown (void);
