@@ -1,3 +1,15 @@
+2015-07-27  Niibe Yutaka  <gniibe@fsij.org>
+
+	* src/usb_stm32f103.c (usb_lld_answer_control): New.
+	(usb_lld_set_data_to_send): Remove.
+	(usb_lld_set_data_to_recv): Not a macro but a function.
+	(std_get_status): Don't use statically allocated memory.
+	(std_get_configuration): Use usb_lld_answer_control.
+	(handle_setup0): Follow the change.
+	* src/usb_ctrl.c (vcom_port_data_setup, usb_cb_setup)
+	(usb_cb_interface): Use	usb_lld_answer_control.
+	* src/usb_desc.c (usb_cb_get_descriptor): Likewise.
+
 2015-07-24  Niibe Yutaka  <gniibe@fsij.org>
 
 	* tool/gnuk_put_binary.py: Remove.
